# knowledge-base

./: .gitignore  README.md  SETUP_QUARTZ.md  package-lock.json  quartz.config.yaml  quartz.lock.json  wiki.yaml
.github/workflows/: publish.yml
cli/: pyproject.toml
cli/src/wiki_cli/: config.py  main.py  server.py  utils.py  wiki_manager.py
cli/src/wiki_cli/commands/: ingest.py  init_cmd.py  lint.py  publish.py  query.py  reingest.py
cli/src/wiki_cli/parsers/: __init__.py  base.py  pdf.py  text.py  web.py
cli/src/wiki_cli/providers/: __init__.py  base.py  claude.py  ollama.py  openai_provider.py
quartz/components/: renderPage.tsx
quartz/static/: chat-widget.js
schema/: SCHEMA.md
schema/templates/: comparison.md  concept.md  entity.md  source-summary.md
sources/inbox/: crdt-intro.md  test-article.md
sources/raw/: a-list-of-newish-command-line-tools.md  a-software-engineering-culture-test-the-pragmatic-engineer.md  redis-explained-by-mahdi-yusuf.md  strangler-fig.md  the-joel-test-12-steps-to-better-code-joel-on-software.md
tests/: conftest.py  test_config.py  test_ingest.py  test_init_cmd.py  test_lint.py  test_parsers.py  test_providers.py  test_query.py  test_wiki_manager.py
wiki/: index.md  log.md
wiki/concepts/: automated-builds.md  autonomy.md  bug-tracking.md  cap-theorem-tradeoff.md  command-line-tool.md  data-structures.md  eventual-consistency.md  heartbeat.md  high-availability-ha.md  index.md  psychological-safety.md  replacement-tools.md  seams.md  source-control.md  split-vote.md  strangler-fig.md  term.md
wiki/entities/: index.md  (+13 more)
(+15 files in other folders)
