[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-cli"
version = "0.1.0"
description = "Personal LLM-powered knowledge base CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
ollama = ["ollama>=0.4"]
all = ["wiki-cli[claude,openai,ollama]"]
dev = [
    "pytest>=8.0",
]

[project.scripts]
wiki = "wiki_cli.main:app"
